package com.example.isp.demoispbehaviormanager.flycomponents;

public interface FlyBehavior {
    public String fly();

}
