package com.example.isp.demoispbehaviormanager.quackcomponents;

public interface QuackBehavior {
    public String quack();
}
