@startuml

title __DEMOISPBEHAVIORMANAGER's Class Diagram__\n

  namespace com.example.isp.demoispbehaviormanager {
    class com.example.isp.demoispbehaviormanager.MiniDuckSimulator {
    }
  }
  

  namespace com.example.isp.demoispbehaviormanager {
    namespace client.animals {
      class com.example.isp.demoispbehaviormanager.client.animals.DecoyDuck {
      }
    }
  }
  

  namespace com.example.isp.demoispbehaviormanager {
    namespace client.animals {
      abstract class com.example.isp.demoispbehaviormanager.client.animals.Duck {
      }
    }
  }
  

  namespace com.example.isp.demoispbehaviormanager {
    namespace client.animals {
      class com.example.isp.demoispbehaviormanager.client.animals.MallardDuck {
      }
    }
  }
  

  namespace com.example.isp.demoispbehaviormanager {
    namespace client.animals {
      class com.example.isp.demoispbehaviormanager.client.animals.ModelDuck {
      }
    }
  }
  

  namespace com.example.isp.demoispbehaviormanager {
    namespace client.animals {
      class com.example.isp.demoispbehaviormanager.client.animals.RedheadDuck {
      }
    }
  }
  

  namespace com.example.isp.demoispbehaviormanager {
    namespace client.animals {
      class com.example.isp.demoispbehaviormanager.client.animals.RubberDuck {
      }
    }
  }
  

  namespace com.example.isp.demoispbehaviormanager {
    namespace flycomponents {
      interface com.example.isp.demoispbehaviormanager.flycomponents.FlyBehavior {
      }
    }
  }
  

  namespace com.example.isp.demoispbehaviormanager {
    namespace flycomponents {
      class com.example.isp.demoispbehaviormanager.flycomponents.FlyNoWay {
      }
    }
  }
  

  namespace com.example.isp.demoispbehaviormanager {
    namespace flycomponents {
      class com.example.isp.demoispbehaviormanager.flycomponents.FlyRocketPowered {
      }
    }
  }
  

  namespace com.example.isp.demoispbehaviormanager {
    namespace flycomponents {
      class com.example.isp.demoispbehaviormanager.flycomponents.FlyWithWings {
      }
    }
  }
  

  namespace com.example.isp.demoispbehaviormanager {
    namespace quackcomponents {
      class com.example.isp.demoispbehaviormanager.quackcomponents.MuteQuack {
      }
    }
  }
  

  namespace com.example.isp.demoispbehaviormanager {
    namespace quackcomponents {
      class com.example.isp.demoispbehaviormanager.quackcomponents.Quack {
      }
    }
  }
  

  namespace com.example.isp.demoispbehaviormanager {
    namespace quackcomponents {
      interface com.example.isp.demoispbehaviormanager.quackcomponents.QuackBehavior {
      }
    }
  }
  

  namespace com.example.isp.demoispbehaviormanager {
    namespace quackcomponents {
      class com.example.isp.demoispbehaviormanager.quackcomponents.Squeak {
      }
    }
  }
  

  com.example.isp.demoispbehaviormanager.client.animals.DecoyDuck -up-|> com.example.isp.demoispbehaviormanager.client.animals.Duck
  com.example.isp.demoispbehaviormanager.client.animals.Duck o-- com.example.isp.demoispbehaviormanager.flycomponents.FlyBehavior : flyBehavior
  com.example.isp.demoispbehaviormanager.client.animals.Duck o-- com.example.isp.demoispbehaviormanager.quackcomponents.QuackBehavior : quackBehavior
  com.example.isp.demoispbehaviormanager.client.animals.MallardDuck -up-|> com.example.isp.demoispbehaviormanager.client.animals.Duck
  com.example.isp.demoispbehaviormanager.client.animals.ModelDuck -up-|> com.example.isp.demoispbehaviormanager.client.animals.Duck
  com.example.isp.demoispbehaviormanager.client.animals.RedheadDuck -up-|> com.example.isp.demoispbehaviormanager.client.animals.Duck
  com.example.isp.demoispbehaviormanager.client.animals.RubberDuck -up-|> com.example.isp.demoispbehaviormanager.client.animals.Duck
  com.example.isp.demoispbehaviormanager.flycomponents.FlyNoWay .up.|> com.example.isp.demoispbehaviormanager.flycomponents.FlyBehavior
  com.example.isp.demoispbehaviormanager.flycomponents.FlyRocketPowered .up.|> com.example.isp.demoispbehaviormanager.flycomponents.FlyBehavior
  com.example.isp.demoispbehaviormanager.flycomponents.FlyWithWings .up.|> com.example.isp.demoispbehaviormanager.flycomponents.FlyBehavior
  com.example.isp.demoispbehaviormanager.quackcomponents.MuteQuack .up.|> com.example.isp.demoispbehaviormanager.quackcomponents.QuackBehavior
  com.example.isp.demoispbehaviormanager.quackcomponents.Quack .up.|> com.example.isp.demoispbehaviormanager.quackcomponents.QuackBehavior
  com.example.isp.demoispbehaviormanager.quackcomponents.Squeak .up.|> com.example.isp.demoispbehaviormanager.quackcomponents.QuackBehavior


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
